--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,7 +1,8 @@
 :root {
   /* font-family: Inter, Avenir, Helvetica, Arial, sans-serif; */
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', 'Montserrat',
+    sans-serif;
   font-size: 16px;
   line-height: 1.5;
   font-weight: 400;
@@ -17,6 +18,9 @@
 }
 
 body {
+  font-family: 'Montserrat', sans-serif;
+  background-color: #f6f6f6;
+  color: #2e2f42;
   display: flex;
   flex-direction: column;
   min-width: 100vw;
